# mksap

./: .claude  .env.template  .gitignore  AGENTS.md  AUDIT_COMPLETE.md  CLAUDE.MD  CLAUDE.md  CODEBASE_GUIDE.md  DATA_CLEANUP_FINAL_REPORT.md  EXTRACTION_CLEANUP_SUMMARY.md  EXTRACTION_GAPS_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  PHASE3_QUICK_START.md  PHASE_3_READY.md  PROJECT_STATUS.md  README.md  TODO.md  whats-next.md
media_extractor/: Cargo.toml  LEGACY_INDEX.md  media_discovery.json  media_discovery.txt
media_extractor/legacy/: README.md
media_extractor/legacy/src/: api.rs  browser.rs  file_store.rs  main.rs  model.rs  render.rs  update.rs
media_extractor/src/: api.rs  browser.rs  browser_download.rs  cli.rs  download.rs  file_store.rs  lib.rs  main.rs  media_ids.rs  model.rs  session.rs  update.rs
media_extractor/src/browser_media/: svgs.rs
media_extractor/src/discovery/: helpers.rs  mod.rs  scanner.rs  statistics.rs  types.rs
media_extractor/src/media/: mod.rs  videos.rs
statement_generator/: CLAUDE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SUMMARY.md  NLP_MODEL_EVALUATION.md  PARALLEL_EXECUTION_FIX.md  README.md  TEST_AUDIT_REPORT.md  TEST_IMPROVEMENTS_SUMMARY.md  VALIDATOR_CONSOLIDATION_COMPLETE.md  best-practices-cloze-deletion-flashcards.md  pyproject.toml  requirements.txt
statement_generator/docs/: ASYNC_IMPLEMENTATION.md  CODE_QUALITY_REFACTORINGS.md  INDEX.md  LEGACY_STATEMENT_STYLE_GUIDE.md  NLP_MODEL_COMPARISON.md  NLP_PERSISTENCE_IMPLEMENTATION.md  PHASE_2_STATUS.md  PHASE_3_STATUS.md  SCISPACY_INTEGRATION.md  SPECIALIZED_NER_EVALUATION.md  STATEMENT_GENERATOR.md  VALIDATION_IMPLEMENTATION.md
statement_generator/docs/deployment/: PHASE4_DEPLOYMENT_PLAN.md
statement_generator/prompts/: cloze_identification.md  critique_extraction.md  keypoints_extraction.md  table_extraction.md
statement_generator/scripts/: migrate_files.py  update_imports.py
statement_generator/src/: __init__.py  checkpoint.py  cloze_identifier.py  config.py  critique_processor.py  file_io.py  keypoints_processor.py  llm_client.py  main.py  models.py  pipeline.py  provider_exceptions.py  provider_manager.py  table_processor.py  text_normalizer.py
statement_generator/src/interface/: cli.py
statement_generator/tests/: __init__.py  test_ambiguity_checks.py  test_enumeration_checks.py  test_hybrid_extra_field_integration.py  test_quality_checks.py
text_extractor/: Cargo.toml
text_extractor/src/: app.rs  auth.rs  browser.rs  categories.rs  cleanup.rs  commands.rs  config.rs  extractor.rs  lib.rs  main.rs  media.rs  models.rs  retry.rs  standardize.rs  utils.rs  validator.rs  workflow.rs
(+6622 files in other folders)
