[tool.poetry]
name = "statement-generator"
version = "1.0.0"
description = "Phase 2: LLM-based statement extraction for MKSAP questions"
authors = ["Mitchell"]

[tool.poetry.dependencies]
python = "^3.10"
anthropic = "^0.40.0"
pydantic = "^2.0.0"
click = "^8.0.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
spacy = "^3.7.0"
scispacy = "^0.5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-mock = "^3.10.0"
black = "^23.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
cache_dir = "artifacts/pytest"
