[package]
name = "mksap-extractor"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
select = "0.6.0"
scraper = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
futures = "0.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
url = "2"
base64 = "0.21"
soup = "0.5"
rand = "0.8"
dotenv = "0.15"
regex = "1"
thirtyfour = "0.31"
